js/src/tests/test262/staging/sm/Error/isError.js
assert
.
sameValue
(
Error
.
isError
(
null
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
undefined
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
123
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
"
string
"
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
{
}
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
new
Object
(
)
)
false
)
;
assert
.
sameValue
(
Error
.
isError
(
new
Error
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
TypeError
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
RangeError
(
)
)
true
)
;
reportCompare
(
0
0
)
;
